ghc-4335c07/testsuite/tests/dependent/should_fail/T13780a.stderr

T13780a.hs:9:40: error:
    • Expected kind ‘Foo a’, but ‘MkFoo’ has kind ‘Foo Bool’
    • In the second argument of ‘(~)’, namely ‘MkFoo’
      In the definition of data constructor ‘SMkFoo’
      In the data instance declaration for ‘Sing’
